--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,8 +1,9 @@
 <h1><%= @machine.location %> Vending Machine</h1>
+<p>Average Snack Price: <%= @machine.average_snack_price %> </p>
 <section class="snacks">
   <ul>
     <% @machine.snacks.each do |snack|  %>
-    <li><%= snack.name %> - $<%= snack.price %></li>
+    <li><%= snack.name %> - $<%= snack.price.round(2) %></li>
     <% end %>
   </ul>
 
