--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @machine.location %> Vending Machine</h1>
-<p>Average Snack Price: <%= @machine.average_snack_price %> </p>
+<p>Average Snack Price: $<%= @machine.average_snack_price %> </p>
 <section class="snacks">
   <ul>
     <% @machine.snacks.each do |snack|  %>
